--- a/personal- profile-web-page.html
+++ b/personal- profile-web-page.html
@@ -77,7 +77,8 @@
 
     <div class="profile">
       <img src="Muskaan_photo.jpg" alt="Profile Photo">
-      <p>My name is Aditi. I am in Class 10. I love painting and drawing in my free time.</p>
+      <p>Hello! I'm Muskaan Begum, a final-year B.Tech student.  
+        I enjoy coding, exploring new tech, and working on creative web projects.</p>
       <button class="hello-button" onclick="sayHello()">Say Hello</button>
     </div>
 
